<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Default items -->
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_uploads"
        android:title="@string/nav_uploads" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings" />

    <!-- Custom items -->
    <item
        android:id="@+id/nav_register"
        android:title="@string/nav_register" />

    <item
        android:id="@+id/nav_newsletter"
        android:title="@string/nav_newsletter" />

    <item
        android:id="@+id/nav_meds"
        android:title="@string/nav_meds" />

    <item
        android:id="@+id/nav_funds"
        android:title="@string/nav_funds" />

    <item
        android:id="@+id/nav_volunteer"
        android:title="@string/nav_volunteer" />

</menu>
